<resources>
    <string name="app_name">ViveLab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ViveLab">ViveLab</string>
    <string name="correo_vivelab">vivelabcucuta@ufps.edu.co</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="title_activity_login">Iniciar Sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="usuario">Usuario o Email</string>
    <string name="clave">Contraseña</string>
    <string name="boton_ingresar">Iniciar Sesión</string>
    <string name="texto_registrarse">Si aún no se encuentra registrado.</string>
    <string name="texto_registrate_aqui">Registrate Aquí</string>
    <string name="email">Email</string>
    <string name="usuario1">Usuario</string>
    <string name="boton_registrarse">Registrarse</string>
    <string name="titulo_registro">Registrar Usuario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restablecer_clave">Restablecer Contraseña</string>
    <string name="nombre">Nombres</string>
    <string name="apellido1">Primer Apellido</string>
    <string name="apellido2">Segundo Apellido</string>
    <string name="apellidos">Primer Apellido</string>
    <string name="tipo_documento">Tipo De Documento</string>
    <string name="numero_documento">Numero De Documento</string>
    <string name="numero_telefono">Numero De Teléfono</string>
    <string name="boton_cambiar_clave">Cambiar</string>
</resources>
