<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registro_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".fragment.editar_usuario.Edita">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:focusableInTouchMode="true">



                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/usuario"
                        android:layout_width="300dp"
                        android:layout_height="46dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/edit_text_style"
                        android:hint="@string/usuario1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorLink="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/nombre"
                        android:layout_width="300dp"
                        android:layout_height="46dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/edit_text_style"
                        android:hint="@string/nombre"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorLink="@android:color/white" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/apellido1"
                        android:layout_width="300dp"
                        android:layout_height="46dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/edit_text_style"
                        android:hint="@string/apellidos"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorLink="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/apellido2"
                        android:layout_width="300dp"
                        android:layout_height="46dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/edit_text_style"
                        android:hint="@string/apellidos"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorLink="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="Tipo de documento" />
                </android.support.design.widget.TextInputLayout>
                <Spinner
                    android:id="@+id/tipo_documento"
                    android:layout_width="300dp"
                    android:layout_height="46dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edit_text_style"
                    android:entries="@array/tipo_documento"
                    android:prompt="@string/tipo_documento" />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/numero_documento"
                        android:layout_width="300dp"
                        android:layout_height="46dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/edit_text_style"
                        android:hint="@string/numero_documento"
                        android:maxLines="1"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        android:textColorLink="@android:color/white" />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/telefono"
                        android:layout_width="300dp"
                        android:layout_height="46dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/edit_text_style"
                        android:hint="@string/numero_telefono"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorLink="@android:color/white" />

                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="Fecha de Nacimiento" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/fecha_nacimiento"
                        android:layout_width="260dp"
                        android:layout_height="46dp"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/edit_text_style"
                        android:ems="10"
                        android:inputType="date" />
                    <ImageView
                        android:id="@+id/btn_calendario"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/icon_calendario"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="23dp"
                        android:layout_weight="1"
                        android:text="Contraseña"
                        android:textSize="25dp" />

                    <Button
                        android:id="@+id/boton_cambiar_clave"
                        android:layout_width="155dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/boton_cambiar_clave"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</ScrollView>